fix: more layout issues!

--- a/src/app/(site)/page.module.css
+++ b/src/app/(site)/page.module.css
@@ -4,3 +4,18 @@
   justify-content: space-between;
   height: 100%;
 }
+
+.home__preview__card__image__container {
+  overflow: hidden;
+  max-width: calc(280px * 1);
+  max-height: calc(420px * 1.25);
+}
+
+/* Mobile */
+@media (max-width: 992px) {
+  .home__preview__card__image__container {
+    overflow: hidden;
+    min-width: calc(280px * 1);
+    min-height: calc(420px * 1);
+  }
+}
